fixed weird layout bug

--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
     height: 100vh;
     width: 100%;
     margin: 0;
+    padding-top: 60px;
 }
 
 *, *:after, *:before {
@@ -160,7 +161,6 @@ body {
 
 .movie-information {
     box-sizing: border-box;
-    margin: 10px 0;
 }
 
 .main-movie-poster {
@@ -410,12 +410,11 @@ body {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: flex-start;
+        align-content: flex-start;
     }
     
     .movie-information {
-        margin-top: 320px;
-        min-height: 400px;
-        max-height: 400px;
+        margin: 10px 0;
     }
 
     .main-movie-poster, .main-movie-poster img {
